derive/tests/compile_fail/unsupported_from.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
#[serde(from = "String")]
struct MyStruct {
    field: String,
}

fn main() {}
