derive/tests/compile_fail/unsupported_from.stderr
error: config::Deserialize does not support #[serde(from)]
 --> tests/compile_fail/unsupported_from.rs:4:9
  |
4 | #[serde(from = "String")]
  |         ^^^^
